web-app-utils: Do not copy cookies when creating new web app

It breaks Google Inbox, which expects cookies to be present from
other Google domains if cookies are also present for Inbox.

https://bugzilla.gnome.org/show_bug.cgi?id=771540